--- a/MyWebApplication/Views/Cashes/Delete.cshtml
+++ b/MyWebApplication/Views/Cashes/Delete.cshtml
@@ -11,12 +11,11 @@
     <h4>Cash</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ReceiptNumber)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ReceiptNumber)
-        </dd>
+       <dt>@Html.DisplayNameFor(model => model.ID)</dt>
+       <dd>
+           @Html.DisplayFor(model => model.ID)
+       </dd>       
+                
         <dt>
             @Html.DisplayNameFor(model => model.Amount)
         </dt>
